[package]
name = "reward-pool"
version = "0.1.0"
description = "Solana program for automatic reward distribution to top token holders"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reward_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl  = "0.31.1"